data/collection/fixes/descriptions/scala/scala-8403
```
scalac-hash dbd8457e4~1 /Users/jason/code/scala2/src/compiler/scala/tools/nsc/backend/icode/Printers.scala
topic/function-to-string /code/scala scalac-hash dbd8457e4 /Users/jason/code/scala2/src/compiler/scala/tools/nsc/backend/icode/Printers.scala
/Users/jason/code/scala2/src/compiler/scala/tools/nsc/backend/icode/Printers.scala:19: error: reference to Linearizer is ambiguous;
it is both defined in trait Linearizers and imported subsequently by
import global.icodes._
  class TextPrinter(writer: PrintWriter, lin: Linearizer) {
                                              ^
```

`Printers.scala` is from v2.10.3.

Regressed in my refactorings of Context.

https://github.com/scala/scala/commit/dbd8457e441bda6a444efd19b5eb1eaec373a535

```
commit dbd8457e441bda6a444efd19b5eb1eaec373a535
Author: Jason Zaugg <jzaugg@gmail.com>
Date:   Tue Apr 16 11:12:44 2013 +0200

    SI-7345 Produce Context#imports from the context chain
```

Minimization pending